[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython==3.1.43",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "python-dotenv>=1.2.2",
    "tavily-python==0.5.0",
    "tqdm>=4.68.3",
]
